need to fix text align

--- a/src/components/ItemDetails/BidItems/BidItems.css
+++ b/src/components/ItemDetails/BidItems/BidItems.css
@@ -4,28 +4,28 @@
     background: #E54A59;
     border-radius: 2rem;
     padding-left: 1.4rem;
+    padding-right: 1.4rem;
     min-height: 7rem;
+    padding-bottom: 4rem;
 }
 
 
 .bidbtn {
     border-radius: 2rem;
-    padding-left: 1.4rem;
+    padding: 1rem;
     color: #E54A59;
     background-color: white;
     font-size: 1.5rem;
+    position: absolute;
+    right: 2rem;
+    cursor: pointer;
 }
 
  
-p {
+.name {
     font-size: 2rem;
     color: white;
-    padding-top: 0;
-}
-  
-
-.bids {
-    
+    padding-top: 1rem;
 }
 
 
@@ -33,7 +33,7 @@ p {
     width: 100%;
     display: flex;
     text-align: left;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     position: relative;
 }
