--- a/src/components/ItemDetails/ItemDetails.css
+++ b/src/components/ItemDetails/ItemDetails.css
@@ -8,6 +8,14 @@
     clear: both;
 
 }
+
+.row2 {
+    width: 80%;
+    margin: 0 auto;
+    clear: both;
+    padding-bottom: 4rem;
+
+}
 .col1of2 {
     width: 50%;
     float: left;
